New based domain

--- a/haproxy/html/maintenance.html
+++ b/haproxy/html/maintenance.html
@@ -18,8 +18,8 @@ footer{font-size:x-small;margin-top:auto;margin-bottom:20px}.pt{padding-top:30vh
 		<h3 class="pt">Under maintenance. Please try again soon!</h3>
 		<footer>
 			<img src="/img/footerlogo.png">
-			<p>Security and Performance by <a href="https://kikeflare.com">Kikeflare</a></p>
-			<p>Vey ID: <code>553d0499f419bd4c66ff48f7d0a27706</code></p>
+			<p>Security and Performance by <a href="https://BasedFlare.com">BasedFlare</a></p>
+			<p>Node: <code>20563af028ae90e0be85ab6c03f0e71b</code></p>
 		</footer>
 	</body>
 </html>
