- Make the "checking your browser for robots" look more like cloudflare - Reduce the default concurrency of the frontend script to 2 threads because any higher seems to crash firefox (and its quick enough even with 2 threads anyway) - Remove the footerlogo from challenge and maintenance page, and update the link

--- a/haproxy/html/maintenance.html
+++ b/haproxy/html/maintenance.html
@@ -17,8 +17,7 @@ footer{font-size:x-small;margin-top:auto;margin-bottom:20px}.pt{padding-top:30vh
 	<body>
 		<h3 class="pt">Under maintenance. Please try again soon!</h3>
 		<footer>
-			<img src="/img/footerlogo.png">
-			<p>Security and Performance by <a href="https://kikeflare.com">Kikeflare</a></p>
+			<p>Security and Performance by <a href="https://gitgud.io/fatchan/haproxy-protection/">haproxy-protection</a></p>
 			<p>Vey ID: <code>553d0499f419bd4c66ff48f7d0a27706</code></p>
 		</footer>
 	</body>
